<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Linkr</string>
    <string name="hello_world">Hello world!Love on the %1d bitches</string>
    <string name="action_settings">Settings</string>
    <string name="setUpButton">Set up a Meeting!</string>
    <string name="subjectHint">What do you want to talk about?</string>
    <string name="action_search">Search</string>
    <string name="title_activity_topic">Topic</string>
    <string name="title_activity_suggestions">Suggestions</string>
    // Request activity                                                        <string name="title_activity_requests">RequestsActivity</string>
    <string name="meeting_date">Meeting Date: </string>
    <string name="request_sent_date">Request: </string>
    <string name="accepted_date">Accepted: </string>
    <string name="accepted_status">Accepted </string>
    <string name="request_status">Processing</string>
    <string name="meeting_status">Meeting scheduled </string>
    //ProfileActivity                                                        <string name="title_activity_profile">Profile</string>
    <string name="profile_subject">#This is what I want to talk about!</string>
    <string name="profile_name">My first name and family name</string>
    <string name="profile_distance">I am this far from you...</string>
    <string name="profile_company">My current company: </string>
    <string name="profile_experience">I have worked in this company for: </string>
    <string name="profile_grade">I am graded by other users: </string>
    //Welcome Activity                                                        <string name="setup_meeting">Set Up a Meeting</string>
    //Subject Activity                                                        <string name="enter_topic">Please choose a subject for your meeting</string>
    <string name="go_meeting">GO MEETING !</string>
    <string name="go_meeting2">GO MEETING !!!!</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    //Navigation Drawer Activity                                                    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Edit Profile</item>
        <item>Requests</item>
        <item>Share</item>
        <item>Topic</item>
        <item>Disconnect</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_important</item>
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_group</item>
        <item>@drawable/ic_action_share</item>
        <item>@drawable/ic_action_chat</item>
        <item>@drawable/ic_action_not_important</item>
    </array>

    <string name="title_activity_display_profile">DisplayProfileActivity</string>
    <string name="title_activity_requests2">Requests2Activity</string>
    <string name="title_activity_definitive_profile">DefinitiveProfileActivity</string>
    <string name="title_activity_requests3">Requests3Activity</string>
    <string name="title_activity_linkedin_connection">Connection with Linkedin</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_connection_type">ConnectionTypeActivity</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="title_activity_single_profile_request">SingleProfileRequestActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="hello">Hello World, MessageActivity!</string>
    <string name="main_empty_list">There is no recent conversation, write new message
		to start one.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pretty_profile_mockup">PrettyProfileMockup</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_calendar">Calendar</string>

</resources>