<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sara.damien.app.ProfileActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_subject"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_above="@+id/textView3"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/profile_picture"
                android:src="@drawable/jim_morrison"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/grade"
                android:text="@string/profile_grade"
                android:layout_below="@id/profile_picture"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/profile_name"
                android:id="@android:id/text1"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/grade"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/company"
                android:text="@string/profile_company"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_below="@android:id/text1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/years_experience"
                android:text="@string/profile_experience"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_below="@id/company"/>
        </RelativeLayout>
    </ScrollView>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_distance"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_gravity="center_horizontal|bottom" />

</RelativeLayout>