<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sara.damien.app.DefinitiveProfileActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N"
        android:id="@+id/buttonNext"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="nextProfile"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="P"
        android:id="@+id/buttonPrevious"
        android:layout_alignTop="@+id/buttonNext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="previousProfile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_subject"
        android:id="@+id/profile_subject"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <ScrollView
        android:id="@+id/profile_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_subject"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_centerHorizontal="true">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/company"
            android:text="@string/profile_company"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/years_experience"
            android:text="@string/profile_experience"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/company"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/profile_picture"
            android:src="@drawable/jim_morrison"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/years_experience"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/grade"
            android:text="@string/profile_grade"
            android:layout_below="@id/profile_picture"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profile_name"
            android:id="@+id/profile_name"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/grade"/>


    </RelativeLayout></ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_distance"
        android:id="@+id/profile_position"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:layout_gravity="center_horizontal|bottom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Propose"
        android:id="@+id/buttonProposeMeeting"
        android:onClick="CreateMeeting"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Accepted"
        android:id="@+id/textAccepted"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#17c62a"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reject"
        android:id="@+id/buttonReject"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/profile_scroll"
        android:layout_alignEnd="@+id/profile_scroll"
        android:onClick="RejectProfile"/>

</RelativeLayout>